Fix og:image path - move image to public folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Traffic Jet Media | Social Media Marketing That Soars" />
     <meta property="og:description" content="We help businesses reach new heights through creative social media marketing and brand strategy." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/src/assets/og.jpg" />
+    <meta property="og:image" content="/og.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Traffic Jet Media | Social Media Marketing That Soars" />
