Update favicon to plane icon from footer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
     
     <link rel="canonical" href="https://trafficjetmedia.com/" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
 
   <body>
